samples/_failures_safe/1761189571_1fa3ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c1f26c16.c: In function ‘main’:
./samples/SAFE/__tmp_c1f26c16.c:148:12: error: missing terminating " character
  148 |     printf("\nEnter minimum log
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c1f26c16.c:148:5: error: expected expression at end of input
  148 |     printf("\nEnter minimum log
      |     ^~~~~~
./samples/SAFE/__tmp_c1f26c16.c:148:5: error: expected declaration or statement at end of input
